# maxbridge-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_cli.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.md
examples/: basic_usage.py  echo_bot.py
maxbridge/: __init__.py  client.py  models.py
maxbridge/functions/: __init__.py  channels.py  groups.py  messages.py  profile.py  uploads.py  users.py
maxbridge_client/: __init__.py  exceptions.py  models.py  packet.py
maxbridge_client/functions/: channels.py  groups.py  messages.py  profile.py  uploads.py  users.py
